--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ baseurl: "/Vcode" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    - { platform: github, user_url: "https://github.com/exampleUser" }
+    - { platform: github, user_url: "https://github.com/jz21324" }
     - { platform: twitter, user_url: "https://twitter.com/exampleUser" }
    
 
